add admin function

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -24,7 +24,7 @@
   text-align: center;
 }
 
-#unfollow-button,#follow-button,#edit-button,#send-button{
+#unfollow-button,#follow-button,#edit-button,#send-button,#del-button{
   display:inline-block;
   width:100px;
   border:1px solid black;
