--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,8 +80,12 @@ a,a:hover{
   margin-bottom:50px;
 }
 
-.topmenu img{
+.topmenu li{
   float:right;
+  list-style:none;
+}
+
+.topmenu img{
   width:30px;
   margin-right:15px;
 }
@@ -121,16 +125,69 @@ a,a:hover{
 .icon-bar{
   background-color:black;
 }
+
 .navbar-toggle{
   float:none;
+}
+
+/* notify */
+#notification {
+  position: relative
+}
+
+#notificationContainer {
+  background-color: #fff;
+  border: 1px solid rgba(100, 100, 100, 0.4);
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
+  overflow: visible;
+  position: absolute;
+  top: 40px;
+  margin-left: -140px;
+  width: 300px;
+  z-index: 999;
+  display: none;
+}
+
+#notificationTitle {
+  z-index: 1000;
+  font-weight: bold;
+  padding: 8px;
+  font-size: 13px;
+  background-color: #ffffff;
+  width: 298px;
+  border-bottom: 1px solid #dddddd;
+}
+
+#notificationsBody {
+  min-height: 200px;
+}
+
+.notifications{
+  display:block;
+  padding:25px;
+  border-bottom:1px solid rgba(100, 100, 100, 0.4);
+}
+
+#notificationFooter {
+  background-color: #e9eaed;
+  text-align: center;
+  font-weight: bold;
+  padding: 8px;
+  font-size: 12px;
+  border-top: 1px solid #dddddd;
 }
 
 @media screen and (max-width:768px){
   .topmenu{
     text-align: center;
   }
-  .topmenu img{
+  .topmenu li{
     float:none;
+    display:inline-block;
+  }
+
+  #notificationContainer{
+    margin-left:-180px;
   }
 
   #menu-mobile{
