--- a/app/views/users/adminuser.html.erb
+++ b/app/views/users/adminuser.html.erb
@@ -2,14 +2,14 @@
   <% users.each do |user| %>
     <div class="col-md-4 col-sm-4" id="user-<%= user.id  %>" style="margin-top:25px;">
       <div class="following">
-        <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'following-avatar'),user %>
+        <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'following-avatar'),user %><br>
         <p class="text-center"><%= user.name %></p>
-        <p class="text-center"><%= user.about %></p>
+        <p class="text-center"><%= user.about %></p><br>
         <div class="btnbar">
           <%= link_to '刪除帳號' , admindestroy_path(user.id) , :class => 'btn btn-default', method: :delete, data: { confirm: "確定刪除嗎?" },remote: :true %>
+          <div class="btn btn-default" data-toggle="modal" data-target="#myModal-<%= user.id %>">傳送訊息</div><br><br>
           <% if user.role == 0  %>
             <%= link_to '發驗證信' , sendauthmail_path(user.id) , :class => 'btn btn-default', method: :post, data: { confirm: "確定寄出嗎?" },remote: :true %>
-            <div class="btn btn-default" style="margin-top:5px;" data-toggle="modal" data-target="#myModal-<%= user.id %>">傳送訊息</div>
           <% end %>
           <div class="modal fade" id="myModal-<%= user.id  %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog" style="text-align: left;">
