--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,10 @@
 		<%= f.text_area :content , :class =>"form-control" %><br><br>
 	</div>
 	<div class="form-group">
+		<%= f.label :tag_list, '標籤: ' %>
+		<%= f.text_field :tag_list, :class =>"form-control" %><br><br>
+	</div>
+	<div class="form-group">
 		<%= f.submit '建立', :class =>"btn btn-default" %>
 		<%= link_to '返回', :back , :class =>"btn btn-default" %>
 	</div>
