--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -20,10 +20,10 @@
             <li class="slink"><%= link_to '發文',new_post_path %></li>
             <li class="slink"><%= link_to '上傳作品集','#' %></li>
             <li class="slink"><%= link_to '我的貼文', current_user %></li>
-            <li class="slink"><%= link_to '我的作品集','#' %></li>
+            <li class="slink"><%= link_to '我的作品集',portfolios_path %></li>
             <li class="slink"><%= link_to '收藏的作品集','#' %></li>
             <li class="slink"><%= link_to '追蹤的設計師',following_path %></li>
-            <% if current_user.role == 3 %>
+            <% if current_user.role == 2 %>
               <li class="slink"><%= link_to '管理用戶',adminuser_path %></li>
               <li class="slink"><%= link_to '管理文章',adminpost_path %></li>
             <% end %>
@@ -51,12 +51,11 @@
       <% if current_user.role > 0  %>
         <hr>
         <li class="slink"><%= link_to '發文',new_post_path %></li>
-        <li class="slink"><%= link_to '上傳作品集','#' %></li>
         <li class="slink"><%= link_to '我的貼文', current_user %></li>
-        <li class="slink"><%= link_to '我的作品集','#' %></li>
+        <li class="slink"><%= link_to '我的作品集',portfolios_path %></li>
         <li class="slink"><%= link_to '收藏的作品集','#' %></li>
         <li class="slink"><%= link_to '追蹤的設計師',following_path %></li>
-        <% if current_user.role == 3 %>
+        <% if current_user.role == 2 %>
           <li class="slink"><%= link_to '管理用戶',adminuser_path %></li>
           <li class="slink"><%= link_to '管理文章',adminpost_path %></li>
         <% end %>
