--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -10,8 +10,8 @@
           <% end %>
         </div>
         <%= link_to image_tag(user.avatar.url(:avatar) , :class => 'following-avatar'),user %>
-        <p class="text-center"><%= user.name %></p>
-        <p class="text-center"><%= user.about %></p>
+        <br><p class="text-center"><%= user.name %></p>
+        <br><p class="text-center"><%= user.about %></p><br>
         <%= render'followbtn', user: user %>
       </div>
     </div>
