--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,34 @@
 <div class="col-md-6 col-md-offset-3">
   <%= image_tag @post.image.url ,:class =>'postimg' %>
-  <div class="likebtn">
-    <span ><span id="likeamt"><%= @post.likeamt %></span> Likes</span>
+  <div class="ui labeled button" tabindex="0">
     <% if current_user %>
       <% if @userlike == nil %>
-        <%= link_to 'Like',likepost_path,remote: true,method: :post,:class=>'btn btn-default',:id =>'likebtn' %>
+        <%= link_to likepost_path,remote: true,method: :post,:id =>'likebtn',:class =>'ui button' do %>
+            <i class="heart icon"></i><span id="likebtn-word">Like</span>
+        <% end %>
+        <span class="ui basic label" id="likeamt">
+          <%= @post.likeamt %>
+        </span>
       <% else %>
-        <%= link_to 'Unlike',unlikepost_path,remote: true,method: :post,:class=>'btn btn-default',:id =>'unlikebtn' %>
+        <%= link_to unlikepost_path,remote: true,method: :post,:id =>'unlikebtn',:class =>'ui button red' do %>
+            <i class="heart icon"></i><span id="likebtn-word">UnLike</span>
+        <% end %>
+        <span class="ui basic label red" id="likeamt">
+          <%= @post.likeamt %>
+        </span>
       <% end %>
-      <% if current_user == @post.user %>
-        <%= link_to '編輯', edit_post_path(@post) ,:class => "btn btn-default" %>
-        <%= link_to '刪除', post_path(@post) ,:class => "btn btn-default", method: :delete, data: {confirm: "確定刪除?" } %>
-      <% end %>
+    <% else %>
+      <div class="ui button">
+        <i class="heart icon"></i>Like
+      </div>
     <% end %>
   </div>
+  <% if current_user %>
+      <% if current_user == @post.user %>
+        <%= link_to '編輯', edit_post_path(@post) ,:class => "ui button" %>
+        <%= link_to '刪除', post_path(@post) ,:class => "ui button", method: :delete, data: {confirm: "確定刪除?" } %>
+      <% end %>
+  <% end %>
   <div class="post-content">
     <%= @post.content %>
   </div>
@@ -22,11 +37,25 @@
     <%= render @comments %>
   </div>
   <% if current_user %>
+    <div class="ui button" id="comment-btn">留言</div>
     <%= form_for [ @post , @post.comments.new ], remote: true do |f| %>
       <%= f.text_field :body ,:class=>"form-control" %><br>
       <%= f.submit '發表',:class => "btn btn-default" %>
+      <div class="btn btn-default" id="comment-cancelbtn">取消</div>
     <% end %>
   <% else %>
     <p class="text-center">請先<%= link_to '登入',login_path %></p>
   <% end %>
 </div>
+
+
+<script>
+  $('#comment-btn').on('click',function(){
+    $('#comment-btn').hide();
+    $('#new_comment').fadeIn();
+  });
+  $('#comment-cancelbtn').on('click',function(){
+    $('#new_comment').fadeOut();
+    $('#comment-btn').show();
+  });
+</script>
