--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -8,7 +8,9 @@
       </li>
     <% end %>
     <li id="notification">
-      <%= link_to image_tag('menu/option.png'),'#',:id =>'notificationLink' %>
+      <div id ='notificationLink'>
+        <i class="alarm icon" style="padding-top:3px;font-size:28px;"></i>
+      </div>
       <div id="notificationContainer">
         <div id="notificationTitle">通知</div>
         <div id="notificationsBody">
