--- a/app/views/likes/unlikepost.js.erb
+++ b/app/views/likes/unlikepost.js.erb
@@ -1,7 +1,7 @@
 $('#likebtn-word').text('Like');
-$('#unlikebtn').attr('href', "/<%= @like.post_id %>/like_post")
+$('#unlikebtn').removeClass('red')
+              .attr('href', "/<%= @like.post_id %>/like_post")
               .attr('id', 'likebtn');
 var like = $('#likeamt').text();
 $('#likeamt').removeClass('red')
              .text(parseInt(like)-1);
-$('a.ui.button').removeClass('red');
