--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     <li id="notification">
       <div id ='notificationLink'>
-        <i class="alarm icon" style="padding-top:3px;font-size:28px;"></i>
+        <%= image_tag('menu/notify.png') %>
       </div>
       <div id="notificationContainer">
         <div id="notificationTitle">通知</div>
