--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -17,7 +17,7 @@
   <div class="portfolio">
     <%= render 'form' %>
     <div class="portfolio-btnbar">
-      <div class="btn btn-default" id="portfolio-createbtn">新增</div>
+      <%= image_tag 'menu/newfolder.png' ,:id => 'portfolio-createbtn' %>
     </div>
   </div>
 </div>
