--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,7 +29,7 @@
 		<input type='hidden' value='0' name='portfolio_id' />
 	<% end %>
 	<div class="form-group">
-		<%= f.submit '創立', :class =>"btn btn-default" %>
-		<%= link_to '返回', :back , :class =>"btn btn-default" %>
+		<%= f.submit '創立', :class =>"ui button" %>
+		<%= link_to '返回', :back , :class =>"ui button" %>
 	</div>
 <% end %>
