--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,6 +18,12 @@
   width:25%;
 }
 
+.col-md-3.grid-item{
+  padding-left:10px;
+  padding-right:10px;
+  margin-top:10px;
+}
+
 @media screen and (max-width:768px){
   .grid-sizer{
     width:100%;
