--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="user-meta">
   <%= image_tag @user.avatar.url(:avatar),:class => 'user-avatar'%>
-  <p class="user-about"><%= @user.about %></p>
+  <p class="user-about">
+    <%= @user.name %><br>
+    <%= @user.about %>
+  </p>
   <%= render'followbtn', user: @user %>
 </div>
 <div class="grid">
