--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for Portfolio.new, :html => {:class => "form",:id => "portfolio-form"}  do |f| %>
+<%= form_for Folder.new, :html => {:class => "form",:id => "folder-form"}  do |f| %>
 	<div class="form-group">
 		<%= f.label :title, '標題: ' %><br><br>
 		<%= f.text_field :title , :class =>"form-control" %>
@@ -9,6 +9,6 @@
 	</div>
 	<div class="form-group text-center">
 		<%= f.submit '傳送', :class =>"btn btn-default", data: {confirm: "確定創立?" } %>
-		<div class="btn btn-default" id="portfolio-cancelbtn">取消</div>
+		<div class="btn btn-default" id="folder-cancelbtn">取消</div>
 	</div>
 <% end %>
