--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "semantic-ui";
 
  /* Reset */
  html, body, div, span, applet, object, iframe,
@@ -71,7 +72,17 @@ a,a:hover{
   color:black;
   text-decoration:none;
 }
+
+html *{
+  font-family:"Helvetica Neue","Arial", "Segoe UI","STHeiti", "Microsoft JhengHei";
+}
 /* Reset end */
+
+.ui.modal{
+  z-index:1060;
+  top:20%;
+}
+
 
 /* Top */
 .topmenu{
