--- a/app/views/folders/choose_removepost.erb
+++ b/app/views/folders/choose_removepost.erb
@@ -1,14 +1,14 @@
-<% if current_user.id == @portfolio.user_id %>
-  <div class="portfolio-btnbar">
-    <%= link_to '返回',@portfolio,:class =>"btn btn-default" %>
+<% if current_user.id == @folder.user_id %>
+  <div class="folder-btnbar">
+    <%= link_to '返回',@folder,:class =>"btn btn-default" %>
   </div>
 <% end %>
 <% @post.each_slice(4) do |posts| %>
   <% posts.each do |post| %>
     <div class="col-md-3 col-sm-3" style="margin-top:25px;" id="post-<%= post.id %>">
-      <div class="portfolio">
-        <div class="portfolio-posts">
-          <%= link_to image_tag(post.image.url(:post) , :class => 'portfolio-editpostimg'),post %>
+      <div class="folder">
+        <div class="folder-posts">
+          <%= link_to image_tag(post.image.url(:post) , :class => 'folder-editpostimg'),post %>
         </div>
         <br><p class="text-center"><%= link_to '刪除', removepost_path(post.id) ,:class => "btn btn-default", method: :delete, data: {confirm: "確定刪除?" }, remote: true %></p>
       </div>
