--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,9 +24,9 @@
 		<%= f.text_field :tag_list, :class =>"form-control" %><br><br>
 	</div>
 	<% if params[:pid] %>
-		<input type='hidden' value='<%= params[:pid] %>' name='post[portfolio_id]' />
+		<input type='hidden' value='<%= params[:pid] %>' name='post[folder_id]' />
 	<% else %>
-		<input type='hidden' value='0' name='portfolio_id' />
+		<input type='hidden' value='0' name='folder_id' />
 	<% end %>
 	<div class="form-group">
 		<%= f.submit '創立', :class =>"ui button" %>
