--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,11 +3,27 @@
   <% @post.each_slice(4) do |posts| %>
       <% posts.each do |post| %>
         <div class="col-lg-3 col-md-3 col-sm-3 grid-item">
-            <%= link_to image_tag(post.image.url , :class =>'postimg'),post %>
-            <span class="authorname"><%=link_to post.user.name , post.user %></span>
+          <div class="post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
+            <%=  image_tag post.image.url , :class =>'postimg' %>
+          </div>
+          <span class="authorname"><%=link_to post.user.name , post.user %></span>
         </div>
       <% end %>
   <% end %>
+</div>
+
+<div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
@@ -16,6 +32,23 @@
       itemSelector: '.grid-item',
       columnWidth: '.grid-sizer',
       percentPosition: true
+    });
+  });
+  /* ajax show */
+  $(document).ready(function(){
+    $('.post-show').on('click',function(){
+      var ajaxurl = '/posts/' + this.getAttribute("data-id");
+      $.ajax({
+        url:ajaxurl,
+        type: 'GET',
+        success: function(response) {
+          $('#postmodal .modal-body').prepend(response);
+        }
+      });
+    });
+    $('#postmodal').on('hidden.bs.modal', function () {
+      console.log('hide');
+      $('#postmodal .modal-body').empty();
     });
   });
 </script>
