--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div id="post-<%= @post.id %>">
   <%= image_tag @post.image.url ,:class =>'postimg' %>
   <div class="ui labeled button" tabindex="0">
     <% if current_user %>
