--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,14 +11,48 @@
   <% @user.mypost.each_slice(4) do |posts| %>
     <% posts.each do |post| %>
       <div class="col-lg-3 col-md-3  grid-item">
-        <%= link_to image_tag(post.image.url , :class =>'postimg'),post %>
+        <div class="post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
+          <%=  image_tag post.image.url , :class =>'postimg' %>
+        </div>
       </div>
     <% end %>
   <% end %>
 </div>
 
+<div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
   var grid = $('.grid').imagesLoaded(function () {
     grid.masonry({itemSelector: '.grid-item', columnWidth: '.grid-sizer', percentPosition: true});
+  });
+
+  /* ajax show */
+  $(document).ready(function(){
+    $('.post-show').on('click',function(){
+      var ajaxurl = '/posts/' + this.getAttribute("data-id");
+      $.ajax({
+        url:ajaxurl,
+        type: 'GET',
+        success: function(response) {
+          $('#postmodal .modal-body').prepend(response);
+        }
+      });
+    });
+    $('#postmodal').on('hidden.bs.modal', function () {
+      console.log('hide');
+      $('#postmodal .modal-body').empty();
+    });
   });
 </script>
