--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,14 +1,29 @@
-<%= form_for Message.new, :html => {:class => "form"}, remote: true do |f| %>
-	<div class="form-group">
-		<%= f.label :title, '標題: ' %><br><br>
-		<%= f.text_field :title , :class =>"form-control" %>
+<div class="modal fade" id="message-<%= receiver.id  %>" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" style="text-align: left;">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">
+					<span aria-hidden="true">&times;</span>
+					<span class="sr-only">Close</span>
+				</button>
+				<h4 class="modal-title">寄信</h4>
+			</div>
+			<div class="modal-body">
+				<%= form_for Message.new, :html => {:class => "form"}, remote: true do |f| %>
+					<div class="form-group">
+						<%= f.label :title, '標題: ' %><br><br>
+						<%= f.text_field :title , :class =>"form-control" %>
+					</div>
+					<input type='hidden' value='<%= receiver.id %>' name='message[receiver_id]' />
+					<div class="form-group">
+						<%= f.label :body, '內文: ' %><br><br>
+						<%= f.text_area :body , :class =>"form-control" %><br><br>
+					</div>
+					<div class="form-group">
+						<%= f.submit '傳送', :class =>"btn btn-default", data: {confirm: "確定送出?" } %>
+					</div>
+				<% end %>
+			</div>
+		</div>
 	</div>
-	<input type='hidden' value='<%= receiver.id %>' name='message[receiver_id]' />
-	<div class="form-group">
-		<%= f.label :body, '內文: ' %><br><br>
-		<%= f.text_area :body , :class =>"form-control" %><br><br>
-	</div>
-	<div class="form-group">
-		<%= f.submit '傳送', :class =>"btn btn-default", data: {confirm: "確定送出?" } %>
-	</div>
-<% end %>
+</div>
